Resolves: fdo#74499 crash on writing .docx

Change-Id: If2d46e26ec6ffead1e283479c516131a2b66f50d